--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="home">
 
         <div class="home-image">
-         <img class="me" src="./about/utshonew.jpg" alt="utsho" >
+         <img class="me" src="./about/utshonew (Custom).jpg" alt="utsho" >
         </div>
 
 
