--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UTSHO</title>
-    <link rel="icon" href="./img/newwww.jpg" type="image/x-icon">
+    <link rel="icon" href="./img/utshoab.jpg" type="image/x-icon">
     <link rel="stylesheet" href="CSSabout.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -26,7 +26,7 @@
     <div class="home">
 
         <div class="home-image">
-         <img class="me" src="./about/utshonew (Custom).jpg" alt="utsho" >
+         <img class="me" src="./about/newwww.jpg" alt="utsho" >
         </div>
 
 
