--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
            <h1>Hi , I'm Mehrab Hossain Utsho</h1>
            <h3>Department of CSE , Islamic University</h3>
            <p>
-            I possess a strong passion for programming and aspire to pursue a career as a software engineer.
+<!--            I possess a strong passion for programming and aspire to pursue a career as a software engineer. -->
+               𝘼𝙨 𝙖 2𝙣𝙙 𝙮𝙚𝙖𝙧 𝘾𝙎𝙀 𝙨𝙩𝙪𝙙𝙚𝙣𝙩 𝙖𝙩 𝙄𝙨𝙡𝙖𝙢𝙞𝙘 𝙐𝙣𝙞𝙫𝙚𝙧𝙨𝙞𝙩𝙮, 𝘽𝙖𝙣𝙜𝙡𝙖𝙙𝙚𝙨𝙝 . 𝙄 𝙝𝙖𝙫𝙚 𝙙𝙚𝙫𝙚𝙡𝙤𝙥𝙚𝙙 𝙖 𝙨𝙩𝙧𝙤𝙣𝙜 𝙥𝙖𝙨𝙨𝙞𝙤𝙣 𝙛𝙤𝙧 𝙥𝙧𝙤𝙗𝙡𝙚𝙢-𝙨𝙤𝙡𝙫𝙞𝙣𝙜 𝙖𝙣𝙙 𝙖𝙡𝙜𝙤𝙧𝙞𝙩𝙝𝙢𝙞𝙘 𝙩𝙝𝙞𝙣𝙠𝙞𝙣𝙜. 𝙈𝙮 𝙟𝙤𝙪𝙧𝙣𝙚𝙮 𝙞𝙣 𝙘𝙤𝙢𝙥𝙚𝙩𝙞𝙩𝙞𝙫𝙚 𝙥𝙧𝙤𝙜𝙧𝙖𝙢𝙢𝙞𝙣𝙜 𝙝𝙖𝙨 𝙡𝙚𝙙 𝙢𝙚 𝙩𝙤 𝙨𝙤𝙡𝙫𝙚 𝙤𝙫𝙚𝙧 500 𝙥𝙧𝙤𝙗𝙡𝙚𝙢𝙨 𝙖𝙘𝙧𝙤𝙨𝙨 𝙫𝙖𝙧𝙞𝙤𝙪𝙨 𝙤𝙣𝙡𝙞𝙣𝙚 𝙟𝙪𝙙𝙜𝙚𝙨,  𝙚𝙣𝙝𝙖𝙣𝙘𝙞𝙣𝙜 𝙢𝙮 𝙚𝙭𝙥𝙚𝙧𝙩𝙞𝙨𝙚 𝙞𝙣 𝙙𝙖𝙩𝙖 𝙨𝙩𝙧𝙪𝙘𝙩𝙪𝙧𝙚𝙨, 𝙖𝙡𝙜𝙤𝙧𝙞𝙩𝙝𝙢𝙨, 𝙖𝙣𝙙 𝙤𝙥𝙩𝙞𝙢𝙞𝙯𝙖𝙩𝙞𝙤𝙣 𝙩𝙚𝙘𝙝𝙣𝙞𝙦𝙪𝙚𝙨.
            </p>
 
         <div class="home-sci">
