--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
        <div class="home-contact">
-           <h1>Hi , I'm Mehrab Hossain Utsho</h1>
+           <h1>Hi , I'm Maharub Hossain Utsho</h1>
            <h3>Department of CSE , Islamic University</h3>
            <p>
 <!--            I possess a strong passion for programming and aspire to pursue a career as a software engineer. -->
